Add required '--add-opens' to cli script
Fixes #1155